
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.hashtable";
option java_outer_classname = "HashTableProto";
option objc_class_prefix = "HT";

package hashtable;

service API {

  rpc set (ChaveValor) returns (Saida) {}
  
  rpc get (Chave) returns (Saida) {}
  
  rpc delK (Chave) returns (Saida) {}
  
  rpc delKV (ChaveVersao) returns (Saida) {}
  
  rpc testAndSet (ChaveValorVersao) returns (Saida) {}
  
}

message ChaveValor {
	Chave Key = 1;
	Valor Value = 2;
}

message ChaveVersao {
	Chave Key = 1;
	int64 Version = 2;
}

message ChaveValorVersao {
	Chave Key = 1;
	Valor Value = 2;
	int64 Version = 3;
}

message Saida {
	string Error = 1;
	Valor Value = 2;
}

message Chave {
	uint64 Key = 1;
}

message Valor {
	int64 Version = 1;
	int64 TimeSt  = 2;
	bytes Data    = 3;
}
